tests/snapshots/errors__errors@component_on_impl.snap
---
source: tests/errors.rs
expression: pretty
---
Status ExitStatus(unix_wait_status(25856))

Stdout:


Stderr:
error: expected `trait`
  --> examples/component_on_impl.rs:45:1
   |
45 | impl<H: Heater, P: Pump> CoffeeShop<H, P> {
   | ^^^^
   |
   = help: `#[component(...)]` is expected to be placed on a trait

error[E0433]: failed to resolve: use of undeclared type `DirkCoffeeShop`
  --> examples/component_on_impl.rs:20:23
   |
20 |     let coffee_shop = DirkCoffeeShop::builder().build();
   |                       ^^^^^^^^^^^^^^
   |                       |
   |                       use of undeclared type `DirkCoffeeShop`
   |                       help: a struct with a similar name exists: `CoffeeShop`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `errors` (example "component_on_impl") due to 2 previous errors
